force-app/main/default/objects/Breach_Register__c/Breach_Register__c.object-meta.xml
<CustomObject>
    <description>A system to track breaches</description>
    <label>Breach Report</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Breach Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Breach Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>