force-app/main/default/objects/Breach_Register__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Breach Register</relationshipLabel>
    <relationshipName>Breach_Register</relationshipName>
    <type>Lookup</type>
</CustomField>