force-app/main/default/objects/Breach_Register__c/fields/Breach_reported_to_ASIC__c.field-meta.xml
<CustomField>
    <fullName>Breach_reported_to_ASIC__c</fullName>
    <label>Breach reported to ASIC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>