force-app/main/default/objects/Breach_Register__c/fields/Breach_Significance__c.field-meta.xml
<CustomField>
    <fullName>Breach_Significance__c</fullName>
    <label>Breach Significance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>