force-app/main/default/objects/Breach_Register__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Breach Register</relationshipLabel>
    <relationshipName>Breach_Register</relationshipName>
    <type>Lookup</type>
</CustomField>