force-app/main/default/objects/Breach_Register__c/fields/Date_Breach_was_Detected__c.field-meta.xml
<CustomField>
    <fullName>Date_Breach_was_Detected__c</fullName>
    <label>Date Breach was Detected</label>
    <required>true</required>
    <type>Date</type>
</CustomField>