force-app/main/default/objects/Breach_Register__c/fields/Date_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Breach__c</fullName>
    <inlineHelpText>When did the breach occur?</inlineHelpText>
    <label>Date of Breach</label>
    <required>true</required>
    <type>Date</type>
</CustomField>