force-app/main/default/objects/Breach_Register__c/fields/Date_Reported_to_ASIC__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported_to_ASIC__c</fullName>
    <label>Date Reported to ASIC</label>
    <type>Date</type>
</CustomField>