force-app/main/default/objects/Breach_Register__c/fields/Details_of_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Circumstances__c</fullName>
    <inlineHelpText>Details of circumstances giving rise to the breach</inlineHelpText>
    <label>Details of Circumstances</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>