force-app/main/default/objects/Breach_Register__c/fields/Expected_timing_of_rectification__c.field-meta.xml
<CustomField>
    <fullName>Expected_timing_of_rectification__c</fullName>
    <label>Expected timing of rectification</label>
    <type>Date</type>
</CustomField>