force-app/main/default/objects/Breach_Register__c/fields/Has_the_breach_been_resolved__c.field-meta.xml
<CustomField>
    <fullName>Has_the_breach_been_resolved__c</fullName>
    <label>Has the breach been resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>