force-app/main/default/objects/Breach_Register__c/fields/Identified_and_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Identified_and_Escalated__c</fullName>
    <inlineHelpText>How was the breach identified and escalated?</inlineHelpText>
    <label>Identified and Escalated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>