force-app/main/default/objects/Breach_Register__c/fields/Is_a_process_improvement_required__c.field-meta.xml
<CustomField>
    <fullName>Is_a_process_improvement_required__c</fullName>
    <label>Is a process improvement required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>