force-app/main/default/objects/Breach_Register__c/fields/Isolated_or_systemic_event__c.field-meta.xml
<CustomField>
    <fullName>Isolated_or_systemic_event__c</fullName>
    <inlineHelpText>Is this a specific and individual breach that is a rare or once off event? Or is this a result of an operating system, policy or procedure shortfall?</inlineHelpText>
    <label>Isolated or systemic event?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Isolated</fullName>
            </value>
            <value>
                <fullName>Systemic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>