force-app/main/default/objects/Breach_Register__c/fields/Isolated_or_systemic_explanation__c.field-meta.xml
<CustomField>
    <fullName>Isolated_or_systemic_explanation__c</fullName>
    <label>Isolated or systemic explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>