force-app/main/default/objects/Breach_Register__c/fields/Other_Staff__c.field-meta.xml
<CustomField>
    <fullName>Other_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The following ORDE Financial team members have been mentioned in this report</inlineHelpText>
    <label>Other Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Breach_Register</relationshipName>
    <type>Lookup</type>
</CustomField>