force-app/main/default/objects/Breach_Register__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>