force-app/main/default/objects/Breach_Register__c/fields/Process_Improvement_details__c.field-meta.xml
<CustomField>
    <fullName>Process_Improvement_details__c</fullName>
    <inlineHelpText>If the process improvement is to be tracked, please detail the requirements</inlineHelpText>
    <label>Process Improvement details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>