force-app/main/default/objects/Breach_Register__c/fields/Reason_to_be_reported_to_ASIC__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_be_reported_to_ASIC__c</fullName>
    <inlineHelpText>State reasons why the breach is required to be reported to ASIC</inlineHelpText>
    <label>Reason to be reported to ASIC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>