force-app/main/default/objects/Breach_Register__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <inlineHelpText>Recommendation for process or system improvements to prevent similar breaches in future</inlineHelpText>
    <label>Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>