force-app/main/default/objects/Breach_Register__c/fields/Remedial_Action__c.field-meta.xml
<CustomField>
    <fullName>Remedial_Action__c</fullName>
    <inlineHelpText>Remedial action taken in relation to the breach. What are we doing to correct the breach?</inlineHelpText>
    <label>Remedial Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>