force-app/main/default/objects/Breach_Register__c/fields/Report_to_ASIC__c.field-meta.xml
<CustomField>
    <fullName>Report_to_ASIC__c</fullName>
    <inlineHelpText>Is the breach required to be reported to ASIC?</inlineHelpText>
    <label>Report to ASIC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>