force-app/main/default/objects/Breach_Register__c/fields/Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>Risk_Classification__c</fullName>
    <label>Risk Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Risk</fullName>
            </value>
            <value>
                <fullName>Market Risk</fullName>
            </value>
            <value>
                <fullName>Liquidity Risk</fullName>
            </value>
            <value>
                <fullName>Regulatory Risk</fullName>
            </value>
            <value>
                <fullName>Representational Risk</fullName>
                <label>Reputational Risk</label>
            </value>
            <value>
                <fullName>Operational Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>