force-app/main/default/objects/Breach_Register__c/fields/Significance_explanation__c.field-meta.xml
<CustomField>
    <fullName>Significance_explanation__c</fullName>
    <label>Significance explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>