force-app/main/default/objects/Breach_Register__c/fields/Summary_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Breach__c</fullName>
    <inlineHelpText>In a nutshell, what was the breach?</inlineHelpText>
    <label>Summary of Breach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>