force-app/main/default/objects/Breach_Register__c/fields/Type_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Breach__c</fullName>
    <label>Type of Breach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFSL</fullName>
            </value>
            <value>
                <fullName>ACL</fullName>
            </value>
            <value>
                <fullName>Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Constitution</fullName>
            </value>
            <value>
                <fullName>ASIC</fullName>
            </value>
            <value>
                <fullName>Corporations Act</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>