force-app/main/default/objects/Breach_Register__c/fields/What_is_the_potential_or_actual_cost__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_potential_or_actual_cost__c</fullName>
    <label>What is the potential or actual cost?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>