force-app/main/default/objects/Breach_Register__c/recordTypes/AML_Breach.recordType-meta.xml
<RecordType>
    <fullName>AML_Breach</fullName>
    <active>true</active>
    <label>AML Breach</label>
</RecordType>