force-app/main/default/objects/Breach_Register__c/recordTypes/Compliance_Breach.recordType-meta.xml
<RecordType>
    <fullName>Compliance_Breach</fullName>
    <active>true</active>
    <description>Actionable nonadherence to either of ORDE’s Fund Compliance Plan or Constitution, AFSL, ACL, ASIC Regulation or the Corporations Act</description>
    <label>Compliance Breach</label>
</RecordType>