force-app/main/default/objects/Breach_Register__c/recordTypes/Operational_Breach.recordType-meta.xml
<RecordType>
    <fullName>Operational_Breach</fullName>
    <active>true</active>
    <description>A materical nonadherence to any of ORDE Finanancial&apos;s Policy &amp; Procedure Manauals, that IS NOT a breach of the FUND Compliance Plan, AFSL, the Fund Constitution, ASIC Regulation or the Corporations Act</description>
    <label>Operational Breach</label>
</RecordType>