force-app/main/default/objects/Breach_Register__c/recordTypes/Privacy_Breach.recordType-meta.xml
<RecordType>
    <fullName>Privacy_Breach</fullName>
    <active>true</active>
    <label>Privacy Breach</label>
</RecordType>