force-app/main/default/objects/Breach_Register__c/validationRules/been_resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>been_resolved</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Has_the_breach_been_resolved__c , &quot;no&quot;) &amp;&amp;  ISBLANK( Expected_timing_of_rectification__c )</errorConditionFormula>
    <errorMessage>Please complete the expected timing of rectification section.</errorMessage>
</ValidationRule>