force-app/main/default/objects/Breach_Register__c/validationRules/Breach_not_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Breach_not_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Approved__c = FALSE,  ISPICKVAL( Stage__c , &quot;Submitted to Legal and Compliance&quot;))</errorConditionFormula>
    <errorMessage>Breach has not been approved yet and can&apos;t proceed to next stage.</errorMessage>
</ValidationRule>