force-app/main/default/objects/Breach_Register__c/validationRules/Date_report_to_ASIC.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_report_to_ASIC</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Breach_reported_to_ASIC__c , &quot;yes&quot;) &amp;&amp;  ISBLANK( Date_Reported_to_ASIC__c )</errorConditionFormula>
    <errorMessage>Please complete date breach was reported to ASIC</errorMessage>
</ValidationRule>