force-app/main/default/objects/Breach_Register__c/validationRules/Has_it_been_reported_to_ASIC.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_it_been_reported_to_ASIC</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stage__c , &quot;closed&quot;),
 OR( ISPICKVAL( Report_to_ASIC__c , &quot;yes&quot;) &amp;&amp;
 ISPICKVAL( Breach_reported_to_ASIC__c , &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Please report to ASIC</errorMessage>
</ValidationRule>