force-app/main/default/objects/Breach_Register__c/validationRules/Head_of_compliance_completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_of_compliance_completion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c , &quot;Submitted to Legal and Compliance&quot;),
OR(ISNULL(Risk_Classification__c),
ISPICKVAL(Is_a_process_improvement_required__c , &quot;&quot;),
ISPICKVAL(Breach_Significance_Compliance__c , &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Please complete all fields in the Head of Compliance section before proceeding.</errorMessage>
</ValidationRule>