force-app/main/default/objects/Breach_Register__c/validationRules/process_improvement.validationRule-meta.xml
<ValidationRule>
    <fullName>process_improvement</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Is_a_process_improvement_required__c, &quot;yes&quot;) &amp;&amp;  ISBLANK(Process_Improvement_details__c)</errorConditionFormula>
    <errorMessage>Please complete process improvement details</errorMessage>
</ValidationRule>