force-app/main/default/objects/Breach_Register__c/validationRules/Report_to_ASIC.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_to_ASIC</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Report_to_ASIC__c, &quot;yes&quot;) &amp;&amp;  ISBLANK(Reason_to_be_reported_to_ASIC__c)</errorConditionFormula>
    <errorMessage>Please complete reason breach needs to be reported to ASIC</errorMessage>
</ValidationRule>