force-app/main/default/objects/Breach_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Breach__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>