force-app/main/default/objects/Breach_Register__c/listViews/Breaches_Open_for_More_then_7_Days.listView-meta.xml
<ListView>
    <fullName>Breaches_Open_for_More_then_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Breach__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open</label>
</ListView>