force-app/main/default/objects/Breach_Register__c/listViews/Submitted_To_Department_Head.listView-meta.xml
<ListView>
    <fullName>Submitted_To_Department_Head</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Breach__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Submitted to Department Head</value>
    </filters>
    <label>Submitted To Department Head</label>
</ListView>