force-app/main/default/objects/Breach_Register__c/listViews/Submitted_to_Legal_and_Compliance.listView-meta.xml
<ListView>
    <fullName>Submitted_to_Legal_and_Compliance</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Submitted to Legal and Compliance</value>
    </filters>
    <label>Submitted to Legal and Compliance</label>
</ListView>